--- a/layihe3.css
+++ b/layihe3.css
@@ -24,6 +24,7 @@
 }
 
 .main {
+    margin-top: 35px;
     display: flex;
     justify-content: space-between;
 }
@@ -36,4 +37,31 @@
     background-color: white;
     border-radius: 4px;
     border-color: white;
+}
+
+#valyutalist1 {
+    margin-top: 10px;
+    display: flex;
+    list-style: none;
+    border-radius: 3px;
+    height: 30px;
+    font-weight: 400;
+    font-size: 12px;
+    color: #C6C6C6;
+}
+
+#valyutalist2 {
+    margin-top: 10px;
+    display: flex;
+    list-style: none;
+    border-radius: 3px;
+    height: 30px;
+    font-weight: 400;
+    font-size: 12px;
+    color: #C6C6C6;
+}
+
+.main li {
+    border: 1px solid #E5E5E5;
+    padding: 8px 19px 8px 19px;
 }
