--- a/layihe3.css
+++ b/layihe3.css
@@ -70,3 +70,9 @@
     background-color: #833AE0;
     color: white;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
