--- a/layihe3.css
+++ b/layihe3.css
@@ -23,6 +23,12 @@
     padding: 18px
 }
 
+#list li:hover {
+    color: black;
+    background-color: #d2d2d4;
+    ;
+}
+
 .main {
     margin-top: 35px;
     display: flex;
@@ -37,6 +43,12 @@
     background-color: white;
     border-radius: 4px;
     border-color: white;
+}
+
+#cixis:hover {
+    background-color: rgb(222, 221, 221);
+    border-radius: 7px;
+    border-color: rgb(200, 198, 198);
 }
 
 #valyutalist1 {
@@ -66,13 +78,75 @@
     padding: 8px 19px 8px 19px;
 }
 
-.active{
+.active {
     background-color: #833AE0;
     color: white;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+input {
+    border: none;
+    height: 50px;
+    width: 100%;
+    font-weight: 700;
+    font-size: 30px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
+
+.btn {
+    display: none;
+    font-weight: 500;
+    font-size: 11px;
+    width: 58px;
+    height: 30px;
+    background-color: white;
+    border-radius: 4px;
+    border-color: white;
+
+}
+
+.btn:hover {
+    background-color: rgb(222, 221, 221);
+    border-radius: 7px;
+    border-color: rgb(200, 198, 198);
+}
+
+@media only screen and (max-width: 1150px) {
+    .main {
+        display: block;
+    }
+
+    .right {
+        margin-top: 40px;
+    }
+}
+
+
+@media only screen and (max-width: 900px) {
+    #list {
+        display: none;
+    }
+
+    .btn {
+        display: block;
+    }
+
+    .options {
+        padding: 10px;
+    }
+    #list li {
+        padding:12px 8px 12px 8px;
+    }
+    #list{
+        position: absolute;
+        background-color: #F5F5F6;
+        margin-top: 10px;
+    }
+
 }
