--- a/layihe3.css
+++ b/layihe3.css
@@ -124,6 +124,7 @@ input[type=number]::-webkit-outer-spin-button {
 
     .right {
         margin-top: 40px;
+        margin-bottom: 40px;
     }
 }
 
